--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello From the otherside
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Site is under construction</h1>
+<p>please hold</p>
+
+</body>
+</html>
