--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Website</title>
+  <title>About Me - My GitHub Website</title>
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -22,19 +22,12 @@
   </div>
 </header>
 
-
-
-  <section class="hero">
-    <div class="hero-overlay">
-      <h2>Daniel J. Haas</h2>
-      <p>Computer Engineering Major, Hobbyist Electrical Engineer and 3D Printing</p>
-    </div>
-  </section>
-
-  <section id="contact" class="contact">
+  <section class="content">
     <div class="container">
-      <h2>Contact Me</h2>
-		<h3 class="email-text">DanHaas@protonmail.com</h3>
+      <h2 class="page-heading">About Me</h2>
+	  <img src="images/me.png" alt="Avatar", class="aboutme-image">
+	  <p class="aboutme-para"> Studying Computer Engineering, Currently enrolled at SUNY Westchest Community</p>
+      <!-- Add more personal details here -->
     </div>
   </section>
 
