--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <div class="container">
       <h2 class="page-heading">About Me</h2>
 	  <img src="images/me.png" alt="Avatar", class="aboutme-image">
-	  <p class="aboutme-para"> Studying Computer Engineering, Currently enrolled at SUNY Westchest Community</p>
+	  <p class="aboutme-para"> Studying Computer Engineering, Currently enrolled at SUNY Westchester Community</p>
       <!-- Add more personal details here -->
     </div>
   </section>
